RESOLVED FIXED11798
[CSS 3] missing cursor support for 'none'
https://bugs.webkit.org/show_bug.cgi?id=11798
Summary [CSS 3] missing cursor support for 'none'
Lars Næsbye Christensen
Reported 2006-12-10 14:11:21 PST
The only cursor selector we lack is the 'none' cursor, which in effect should be invisible (done here with PNG transparency).
Attachments
patch to support CSS 3 'none' cursor selector (8.66 KB, patch)
2006-12-10 14:13 PST, Lars Næsbye Christensen
darin: review-
patch v2 - with more platforms (10.03 KB, patch)
2006-12-14 17:03 PST, Lars Næsbye Christensen
ap: review+
Lars Næsbye Christensen
Comment 1 2006-12-10 14:13:08 PST
Created attachment 11793 [details] patch to support CSS 3 'none' cursor selector
Darin Adler
Comment 2 2006-12-11 11:22:41 PST
Comment on attachment 11793 [details] patch to support CSS 3 'none' cursor selector Looks fine for Mac, but I'd like to see a patch that keeps the other platforms compiling too.
Darin Adler
Comment 3 2006-12-11 13:28:48 PST
Comment on attachment 11793 [details] patch to support CSS 3 'none' cursor selector Marking review- just because of the "no changes for the other platforms" issue. Please submit a patch that at least tries to keep all the platforms working.
Lars Næsbye Christensen
Comment 4 2006-12-14 17:03:07 PST
Created attachment 11848 [details] patch v2 - with more platforms Point taken. This should at least provide some default results.
Alexey Proskuryakov
Comment 5 2006-12-17 01:48:21 PST
Comment on attachment 11848 [details] patch v2 - with more platforms r=me Qt has BlankCursor; I'm going to tweak the patch to use it instead of pointer when landing.
Lars Næsbye Christensen
Comment 6 2006-12-17 09:07:53 PST
(In reply to comment #5) That sounds nice :-) And yes, I should be more mindful about making sure they all compile.
Alexey Proskuryakov
Comment 7 2006-12-17 11:40:51 PST
Committed revision 18270. I also had to fix cssparser.cpp: when changing CSS value IDs, one needs to make sure that the calculations are still correct. This patch broke border/outline properties entirely, and an earlier cursor patch broke -webkit-background-composite: copy. What do you think about adding support for Mozilla cursors (bug 8988)? I'm not sure what our policy on Mozilla CSS extensions is (currently, we don't support any -moz- properties), but those cursors look pretty useful.
Lars Næsbye Christensen
Comment 8 2006-12-17 12:23:51 PST
(In reply to comment #7) Well, unless there's a general attitude against them, I don't see why we shouldn't include them. It'd be a pleasure. As far as I can see, it's the grab/grabbing and zoom in/out cursors we need to add. However, I spotted that some of the existing cursor images have bad transparency and other issues. Also, we could really do with a more modern, OSX-ish set of cursors generally. 16x16 B/W and no drop shadows? We can do better, and I think that's priority #1 :-)
Note You need to log in before you can comment on or make changes to this bug.