WebCore/platform/Cursor.h
@@ -111,6 +111,7 @@ namespace WebCore {
     const Cursor& progressCursor();
     const Cursor& aliasCursor();
     const Cursor& copyCursor();
+    const Cursor& noneCursor();
 
 } // namespace WebCore
 
