WebCore/platform/gdk/CursorGdk.cpp
@@ -198,4 +198,10 @@ const Cursor& rowResizeCursor()
     return c;
 }
 
+const Cursor& noneCursor()
+{
+    static Cursor c = gdk_cursor_new(GDK_LEFT_PTR);
+    return c;
+}
+
 }
