WebCore/platform/qt/CursorQt.cpp
@@ -84,6 +84,7 @@ protected:
         , SizeBDiagCursor(QCursor(Qt::SizeBDiagCursor))
         , SplitHCursor(QCursor(Qt::SplitHCursor))
         , SplitVCursor(QCursor(Qt::SplitVCursor))
+        , BlankCursor(QCursor(Qt::BlankCursor))
 #endif
     {
     }
@@ -109,6 +110,7 @@ public:
     Cursor SizeBDiagCursor;
     Cursor SplitHCursor;
     Cursor SplitVCursor;
+    Cursor BlankCursor;
 };
 
 Cursors* Cursors::s_self = 0;
@@ -261,6 +263,11 @@ const Cursor& progressCursor()
 const Cursor& aliasCursor()
 {
     return Cursors::self()->PointerCursor;
+}
+
+const Cursor& noneCursor()
+{
+    return Cursors::self()->BlankCursor;
 }
 
 }
